Fix back button visibility: add SVG fill to header icons, change PageHandler close to back arrow

--- a/sass/popup.scss
+++ b/sass/popup.scss
@@ -87,6 +87,9 @@ svg {
     }
 
     svg {
+      @include themify($themes) {
+        fill: themed("black-1");
+      }
       vertical-align: sub;
     }
   }
